<resources>
    <string name="app_name">5GMSMediaSessionHandler</string>
    <string name="version_text_field">Version %s</string>
    <string name="headline">5GMS Media Session Handler</string>
    <string name="action_license">License</string>
    <string name="action_about">About</string>
    <string name="action_attribution_notice">Attribution Notice</string>
    <string name="contact">Contact</string>
    <string name="authors">Authors</string>
    <string name="project">Project</string>
    <string name="description">Description</string>
    <string name="description_text"><![CDATA[<p>The 5GMS Media Session Handler is a 5GMS Client component that forms part of the 5G Media Services framework as defined in ETSI TS 126.501.</p>
    <p>A Media Session Handler first retrieves its configuration (“Service Access Information”) from the 5GMSd AF at reference point M5d and then uses this configuration information to activate and exploit the currently provisioned 5GMSd features.
    In addition, the Media Session Handler exposes APIs via M6 to the 5GMSd-Aware Application and to the Media Player (for downlink streaming).</p>]]></string>
    <string name="github_label">Github</string>
    <string name="github_url">https://github.com/5G-MAG/rt-5gms-media-session-handler</string>
    <string name="twitter_label">Twitter</string>
    <string name="twitter_url">https://twitter.com/5GMAGnews</string>
    <string name="linked_in_label">Linkedin</string>
    <string name="linked_in_url">https://www.linkedin.com/company/5g-mag/?miniCompanyUrn=urn%3Ali%3Afs_miniCompany%3A29303180</string>
    <string name="slack_label">Slack</string>
    <string name="slack_url">https://join.slack.com/t/5g-mag/shared_invite/zt-trtvsmw5-yYgcRidDgIS7x_u48sTuQA</string>
    <string name="website_label">Website</string>
    <string name="website_url">https://www.5g-mag.com/</string>
    <string name="authors_text">https://github.com/5G-MAG/rt-5gms-media-session-handler/graphs/contributors</string>
    <string name="twitter_icon_content_description">Twitter Icon</string>
</resources>