<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.Material3.HeadlineLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-163dp"
        tools:layout_editor_absoluteY="133dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:scrollbarStyle="insideInset"
                android:text="@string/headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/versionNumberView"
                android:layout_width="109dp"
                android:layout_height="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/version_text_field"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/contactHeadline"
                android:layout_width="162dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/contact"
                android:textColor="@color/fivegmag_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

            <ImageView
                android:id="@+id/twitterIcon"
                android:layout_width="32dp"
                android:layout_height="29dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/twitter_icon_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactHeadline"
                app:srcCompat="@drawable/ic_action_x" />

            <TextView
                android:id="@+id/twitterLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:autoLink="web"
                android:text="@string/twitter_label"
                android:textColor="@color/fivegmag_blue"
                app:layout_constraintStart_toEndOf="@+id/twitterIcon"
                app:layout_constraintTop_toTopOf="@+id/twitterIcon" />

            <ImageView
                android:id="@+id/linkedInIcon"
                android:layout_width="32dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twitterIcon"
                app:srcCompat="@drawable/ic_action_linked_in" />

            <TextView
                android:id="@+id/linkedInLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/linked_in_label"
                android:textColor="@color/fivegmag_blue"
                app:layout_constraintStart_toEndOf="@+id/linkedInIcon"
                app:layout_constraintTop_toTopOf="@+id/linkedInIcon" />

            <ImageView
                android:id="@+id/slackIcon"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkedInIcon"
                app:srcCompat="@drawable/ic_action_slack" />

            <TextView
                android:id="@+id/slackLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/slack_label"
                android:textColor="@color/fivegmag_blue"
                app:layout_constraintStart_toEndOf="@+id/slackIcon"
                app:layout_constraintTop_toTopOf="@+id/slackIcon" />

            <ImageView
                android:id="@+id/websiteIcon"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slackIcon"
                app:srcCompat="?attr/actionModeShareDrawable" />

            <TextView
                android:id="@+id/websiteLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/website_label"
                android:textColor="@color/fivegmag_blue"
                app:layout_constraintStart_toEndOf="@+id/websiteIcon"
                app:layout_constraintTop_toTopOf="@+id/websiteIcon" />


            <TextView
                android:id="@+id/authorsHeadline"
                android:layout_width="162dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/authors"
                android:textColor="@color/fivegmag_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/websiteIcon" />

            <TextView
                android:id="@+id/authorsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:autoLink="web"
                android:text="@string/authors_text"
                android:textColorLink="@color/fivegmag_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorsHeadline" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="72dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/projectHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/project"
                android:textColor="@color/fivegmag_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/githubLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/github_label"
                android:textColor="@color/fivegmag_blue"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/projectHeadline" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectHeadline"
                app:srcCompat="@drawable/github_mark" />

            <TextView
                android:id="@+id/descriptionHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/description"
                android:textColor="@color/fivegmag_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/versionNumberView" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionHeadline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>